--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.19</aspectj.version>
         <allure.version>2.23.0</allure.version>
-        <selenium.version>4.14.1</selenium.version>
+        <selenium.version>4.16.1</selenium.version>
     </properties>
 
     <dependencies>
@@ -61,7 +61,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M8</version>
                 <configuration>
                     <testFailureIgnore>false</testFailureIgnore>
                     <argLine>
